# flyover

./: controlbar.js  flight-data.json  flight.json  index.html  main.js  netlify.toml  package.json  sample.gpx.js  style.css  style.scss  vite.config.js
assets/flights/: harbour_ca.xml
public/assets/flights/: flight.json
public/assets/models/: a320.glb
src/: config.js  controlbar.js  geo_utils.js  loader.scss  main.js  mapcontroller.js  mousecontrol.js  pahtLaneModel.js  style.scss  worker.js
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
