[package]
name = "wasm"
version = "0.1.0"
authors = ["emoni <emonidi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = {version="0.2.63",features=["serde-serialize"]}
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
geo = "0.20.1"
web-sys = {version= "0.3.57", features=["console"]}
log = "0.4.17"
geojson = {version="*", features=["geo-types"]}
wasm-bindgen-console-logger = "0.1.1"
serde-wasm-bindgen = "0.4.3"
geo-types = "0.7.4"
interpolation = "0.2.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]